Fixed bug with analytics on mobile

--- a/front-end/src/app/components/chart/chart.styl
+++ b/front-end/src/app/components/chart/chart.styl
@@ -1,5 +1,7 @@
 .graph
 	padding 1em
+	@media  screen and (min-width:320px) and (max-width:767px)
+		padding-top 0.1em
 	background rgba(0,0,0,.2)
 	.chart-row
 		display flex
@@ -7,17 +9,24 @@
 		margin 15px 0
 		box-sizing border-box
 		cursor pointer
+		@media  screen and (min-width:320px) and (max-width:767px)
+			flex-direction column
+		&__name
+			color #b4bbc5
+			@media  screen and (min-width:320px) and (max-width:767px)
+				order 1
+				padding-top 0.5em
 		&:hover
 			.chart-row__name
 				color #FFF
 			.chart-row__bar
 				background #01ffeb
 				box-shadow 1.2px 1px 0px 0 #01AFA3, 2px 2px 0px 0 #01AFA3, 2px 3px 0px 0 #01AFA3, 3px 3px 0px 0 #01AFA3, 3px 4px 0px 0 #01AFA3, 4px 5px 0px 0 #01AFA3, 4px 4px 0px 0 #01AFA3, 4px 5px 0px 0 #01AFA3
-		.chart-row__name
+		&__name
 			flex-basis 30%
 			min-width 30%
 			overflow hidden
-			text-wrap none
+			text-wrap nowrap
 			font-size 0.8em
 			display flex
 			flex-direction column
@@ -29,7 +38,7 @@
 			justify-content flex-start
 			width 100%
 			min-width 2% !important
-		.chart-row__bar
+		&__bar
 			cursor pointer
 			background mainColor
 			width 100%
